--- a/module/Acidente/view/acidente/acidente/index.phtml
+++ b/module/Acidente/view/acidente/acidente/index.phtml
@@ -4,10 +4,16 @@ $this->headTitle($title);
 $this->headLink()->appendStylesheet('/css/datepicker.css');
 $this->headScript()->prependFile('/js/bootstrap-datepicker.js');
 ?>
-
 <h1><?php echo $this->escapeHtml($title); ?></h1>
+
+<?php
+	$isAutenticado = isset($permissao) && $permissao;
+	$isAdmin = $isAutenticado && $permissao == 'administrador';
+	$isCoordenador = $isAutenticado && ($isAdmin || $permissao == 'coordenador');
+?>
+
 <p>
-    <a class='btn btn-default' href="<?php echo $this->url('acidente', array('action'=>'add'));?>">Adicionar acidente</a>
+	<a class='btn btn-default' href="<?php echo $this->url('acidente', array('action'=>'add'));?>">Adicionar acidente</a>
 </p>
 
 <hr class="divider">
@@ -57,47 +63,23 @@ $this->headScript()->prependFile('/js/bootstrap-datepicker.js');
 
 <hr class="divider">
 
-
-<?php
-	$isAutenticado = isset($permissao) && $permissao;
-	$isAdmin = $isAutenticado && $permissao == 'administrador';
-	$isCoordenador = $isAutenticado && ($isAdmin || $permissao == 'coordenador');
-?>
-
 <table class="table">
 <tr>
 	<th>Data</th>
-    <th>Localização</th>
+	<th>Status</th>
+	<th>Localização</th>
 	<th>Descrição</th>
-	<th>Data</th>
-
-    <th>&nbsp;</th>
+	<th>&nbsp;</th>
 </tr>
 <?php foreach ($acidentes as $acidente) : ?>
 <tr>
 	<td><?php echo $this->escapeHtml(date('d/m/Y', strtotime($acidente->data)));?></td>
-    <td><?php echo $this->escapeHtml($acidente->localizacao);?></td>
+	<td><?php echo $this->escapeHtml($acidente->statusNome);?></td>
+	<td><?php echo $this->escapeHtml($acidente->localizacao);?></td>
 	<td><?php echo $this->escapeHtml($acidente->descricao);?></td>
-
-	<td><?php echo $this->escapeHtml(date('d/m/Y', strtotime($acidente->data)));?></td>
-     <?php
-	if ($isCoordenador) {
-		if (!$missao->recursosAlocados) {
-	?>
 	<td>
-		<a href="<?php echo $this->url('missao', array('action'=>'alocarrecursos', 'id' => $missao->id));?>">Alocar recursos</a> 
+		<a href="<?php echo $this->url('acidente', array('action' => 'info', 'id' => $acidente->id));?>">Mais informações</a>
 	</td>
-	<?php } else { ?>
-		<td></td>
-	<?php
-		} 
-	}
-	?>
-
-    <td>
-        <a href="<?php echo $this->url('acidente',
-            array('action' => 'info', 'id' => $acidente->id));?>">Mais Informações</a>
-    </td>
 </tr>
 <?php endforeach; ?>
 </table>
