--- a/module/Acidente/view/acidente/acidente/info.phtml
+++ b/module/Acidente/view/acidente/acidente/info.phtml
@@ -1,155 +1,102 @@
 <?php
-$title = 'Informações do Acidente';
+$title = 'Informações do acidente';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
-
-
-<div></div>
-
-<table class="table" >
-	<tr>
-		<td>
-			Localização
-		</td>
-		<td>
-			<?php 
-				echo $this->escapeHtml($acidente->localizacao);
-			?>
-		</td>
-	</tr>
-	<tr>
-		<td>
-			Descrição
-		</td>
-		<td>
-			<?php 
-				echo $this->escapeHtml($acidente->descricao);
-			?>
-		</td>
-	</tr>
-	<tr>
-		<td>
-			Data 
-		</td>
-		<td>
-			<?php 
-				echo $this->escapeHtml($acidente->data);
-			?>
-		</td>
-	</tr>
-	<tr>
-		<td>
-			Número de vítimas
-		</td>
-		<td>
-			<?php 
-				echo $this->escapeHtml($acidente->numeroVitimas);
-			?>
-		</td>
-	</tr>
-	<tr>
-		<td>
-			Bombeiros
-		</td>
-		<td>
-			<?php 
-				if($acidente->numeroVitimas=0)
-					echo $this->escapeHtml("Nao");
-				else
-					echo $this->escapeHtml("Sim");
-			?>
-		</td>
-	</tr>
-	<tr>
-		<td>
-			Polícia
-		</td>
-		<td>
-			<?php 
-				if($acidente->policia=0)
-					echo $this->escapeHtml("Nao");
-				else
-					echo $this->escapeHtml("Sim");
-			?>
-		</td>
-
-
-	</tr>
-	<tr>
-		<td>
-			Número de obstruções
-		</td>
-		<td>
-			<?php 
-				echo $this->escapeHtml($acidente->obstrucao);
-			?>
-
-		</td>
-
-		
-	</tr>
-
-		<tr>
-		<td>
-			Status
-		</td>
-		<td>
-			<?php 
-				if($acidente->status=="cadastrado")
-					echo $this->escapeHtml("Cadastrado");
-				if($acidente->status=="finalizado")
-					echo $this->escapeHtml("Finalizado");
-			?>
-
-		</td>
-
-		
-	</tr>
-
-</table>
 
 <?php
 	$isAutenticado = isset($permissao) && $permissao;
 	$isAdmin = $isAutenticado && $permissao == 'administrador';
 	$isCoordenador = $isAutenticado && ($isAdmin || $permissao == 'coordenador');
+	$isEspecialista = $isAutenticado && ($isAdmin || $permissao == 'especialista');
 ?>
+
+<br />
+
+<table class="table" >
+	<tr>
+		<td>Data</td>
+		<td><?php echo $this->escapeHtml(date('d/m/Y H:i:s', strtotime($acidente->data))); ?></td>
+	</tr>
+	<tr>
+		<td>Status</td>
+		<td><?php echo $this->escapeHtml($acidente->statusNome); ?></td>
+	</tr>
+	<tr>
+		<td>Localização</td>
+		<td><?php echo $this->escapeHtml($acidente->localizacao); ?></td>
+	</tr>
+	<tr>
+		<td>Descrição</td>
+		<td><?php echo $this->escapeHtml($acidente->descricao); ?></td>
+	</tr>
+	<tr>
+		<td>Presença de bombeiros?</td>
+		<td>
+			<?php if ($acidente->bombeiro) : ?>
+				<img src="<?php echo $this->basePath('img/ok.png') ?>" />
+			<?php else : ?>
+				<img src="<?php echo $this->basePath('img/nok.png') ?>" />
+			<?php endif; ?>
+		</td>
+	</tr>
+	<tr>
+		<td>Presença de polícia?</td>
+		<td>
+			<?php if ($acidente->policia) : ?>
+				<img src="<?php echo $this->basePath('img/ok.png') ?>" />
+			<?php else : ?>
+				<img src="<?php echo $this->basePath('img/nok.png') ?>" />
+			<?php endif; ?>
+		</td>
+	</tr>
+	<tr>
+		<td>Número de vítimas</td>
+		<td><?php echo $this->escapeHtml($acidente->numeroVitimas); ?></td>
+	</tr>
+	<tr>
+		<td>Quantidade de obstruções na via</td>
+		<td><?php echo $this->escapeHtml($acidente->obstrucao); ?></td>
+	</tr>
+</table>
+
+<br />
 
 <table class="table">
 <tr>
-    <th>Missões alocadas para esse acidente</th>
-	<?php if ($isCoordenador) : ?><th>Recursos</th><?php endif; ?>
+	<th>Missões alocadas</th>
+	<th id="recursos-th"></th>
 	<th>&nbsp;</th></tr>
-
-<?php foreach ($missoes as $missao) : ?>
+<?php if (count($missoes) == 0) { ?>
 <tr>
-    <td><?php echo $this->escapeHtml($missao->nome);?></td>
-    <?php
-	if ($isCoordenador) {
-		if (!$missao->recursosAlocados) {
-	?>
+	<td>Não existem missões alocadas para este acidente</td>
+	<td></td>
+	<td></td>
+</tr>
+<?php } else { foreach ($missoes as $missao) : ?>
+<tr>
+	<td><?php echo $this->escapeHtml($missao->nome);?></td>
+	<?php if ($isCoordenador && !$missao->recursosAlocados) { ?>
+	<script type="text/javascript">
+		$('#recursos-th').html("Recursos");
+	</script>
 	<td>
 		<a href="<?php echo $this->url('missao', array('action'=>'alocarrecursos', 'id' => $missao->id));?>">Alocar recursos</a> 
 	</td>
 	<?php } else { ?>
 		<td></td>
-	<?php
-		} 
-	}
-	?>
+	<?php } ?>
 	<td>
 		<a href="<?php echo $this->url('missao', array('action'=>'detalhes', 'id' => $missao->id));?>">Detalhes</a> 
 	</td>
 </tr>
-
-<?php endforeach; ?>
-
+<?php endforeach; } ?>
 </table>
 
-<?php if ($acidente->status=='cadastrado'){ ?>
-	<a class='btn btn-default' href="<?php echo $this->url('acidente', array('action'=>'alocarmissao', 
-			'id'=>$acidente->id));?>">Alocar missões</a>
-<?php
-}
-?>
 
+<?php if ($isEspecialista && $acidente->status == 'cadastrado') { ?>
+<a class='btn btn-primary' href="<?php echo $this->url('acidente', array('action'=>'alocarmissao', 
+		'id'=>$acidente->id));?>">Alocar missões</a>
+<?php } ?>
+
+<a class="btn btn-default" href="<?php echo $this->url('acidente'); ?>">Voltar</a>
