--- a/module/Missao/view/missao/missao/alocarrecursos.phtml
+++ b/module/Missao/view/missao/missao/alocarrecursos.phtml
@@ -1,36 +1,3 @@
-
-
-<script type="text/javascript">
-    /*
-    alert( "ready!" );
-
-$(document).ready(function() {
-    alert( "ready!" );
-});
-
-function validate(){
-    int total = document.getElementByName("total").val();
-    alert(total);
-    int i;
-    String nameQ;
-
-    for(i=1; i<=total;i++){
-        nameQ = "quantidade" + i;
-
-        if(!preg_match("/[^0-9\.\-\Ä\ä\Ö\ö\Ü\ü\ ]+$/s",document.getElementByName(nameQ).val())) {
-            return TRUE; 
-        }else{
-            alert("Esta erradi!");
-            return FALSE;
-        } 
-    }
-}
-*/
-</script>
-
-
-
-
 <?php
 $title = 'Alocar recursos';
 $this->headTitle($title);
@@ -40,12 +7,10 @@ $this->headTitle($title);
 <?php 
 	$idMissao = $this->idMissao;
 	$nomeAction = $this->serverUrl(true);
+	$count = 0;
 ?>
 
-<?php  
-
-
-	$count = 0 ; ?>
+<br />
 <form action=<?php echo $nomeAction; ?> method="POST" name="alocarrecursos">
 
 <input name="total" class="hidden" value=<?php echo $this->total; ?>>
@@ -56,67 +21,27 @@ $this->headTitle($title);
 	<th>Quantidade</th>
 	<th>&nbsp;</th>
 </tr>
-
 <tr>
-<?php foreach ($tipoRecursos as $tipoRecurso) : ?>
-<tr>
-	<td>
-		<?php echo $this->escapeHtml($tipoRecurso->nome);?>
-	</td>
-	<?php
-		$idtipoRecurso = $tipoRecurso->id;
-	?>
-	<td>
-		<?php $nome = "quantidade"; ?>
-		<?php $idtipo = "id";
-			$count = $count + 1; 
-		?>
-		<input name=<?php echo $idtipo. $count; ?> class="hidden" value=<?php echo $idtipoRecurso; ?>>
-		<input name=<?php echo $nome. $count; ?> type="text" value="0">
-
-	</td>
+	<?php foreach ($tiposRecurso as $tipoRecurso) : ?>
+	<div class="form-group">
+	<tr>
+		<td><?php echo $this->escapeHtml($tipoRecurso->nome);?></td>
+		<td><input class='form-control' name=<?php echo 'qtd'.$tipoRecurso->id ?> type="text" value="0"></td>
+	</tr>
+	<?php endforeach; ?>
+	</div>
 </tr>
-<?php endforeach; ?>
-</tr>
-
-<tr>
-	<td>
-		<input type="submit" class="btn btn-default" name="submit" value="Alocar recursos">
-	</td>
-	<td>
-		<input class='btn' name='submit' type='submit' value='Cancelar'>
-	</td>
-</tr>
-
 </table>
+
+<input type="submit" class="btn btn-primary" name="submit" value="Alocar recursos">
+<a id="btn-voltar" class="btn btn-default" href="<?php echo $this->url('missao'); ?>">Voltar</a>
+
 </form>
 
-
-
-
 <script type="text/javascript">
-    alert( "ready!" );
-
-$(document).ready(function() {
-    alert( "ready!" );
-});
-
-function validate(){
-    int total = document.getElementByName("total").val();
-    alert(total);
-    int i;
-    String nameQ;
-
-    for(i=1; i<=total;i++){
-        nameQ = "quantidade" + i;
-
-        if(!preg_match("/[^0-9\.\-\Ä\ä\Ö\ö\Ü\ü\ ]+$/s",document.getElementByName(nameQ).val())) {
-            return TRUE; 
-        }else{
-            alert("Esta erradi!");
-            return FALSE;
-        } 
-    }
-}
-
+	$(document).ready(function() {
+		if (document.referrer.indexOf(window.location.hostname) != -1) {
+			$('#btn-voltar').attr('href', document.referrer);
+		}
+	})
 </script>
