--- a/module/Missao/view/missao/missao/detalhes.phtml
+++ b/module/Missao/view/missao/missao/detalhes.phtml
@@ -23,30 +23,33 @@ $this->headTitle($title);
 	</tr>
 </table>
 
-<?php
-if (count($recursosLista) > 0) {
-?>
 <table class="table">
 <tr>
     <th>Recurso</th>
     <th>Quantidade</th>
-    <th>&nbsp;</th>
 </tr>
-
-<?php foreach ($recursosLista as $recurso) : ?>
+<?php
+if (count($recursosLista) > 0) {
+foreach ($recursosLista as $recurso) : ?>
 <tr>
 	<td><?php echo $this->escapeHtml($recurso->nome); ?></td>
 	<td><?php echo $this->escapeHtml($recurso->quantidade); ?></td>
 </tr>
-<?php endforeach; ?>
+<?php endforeach;
+} else { ?>
+<tr>
+	<td>Não há recursos alocados para esta missão.</td>
+	<td></td>
+</tr>
+<?php } ?>
 </table>
 
-<?php
-} else {
-	echo $this->escapeHtml("Não há recursos alocados para esta missão."); 
-}
-?>
+<a id="btn-voltar" class="btn btn-default" href="<?php echo $this->url('missao'); ?>">Voltar</a>
 
-<ul class="nav nav-pills">
-	<li class="active"><a href="<?php echo $this->url('missao', array('action'=>'index')); ?>">Voltar</a></li>
-</ul>
+<script type="text/javascript">
+	$(document).ready(function() {
+		if (document.referrer.indexOf(window.location.hostname) != -1) {
+			$('#btn-voltar').attr('href', document.referrer);
+		}
+	})
+</script>
