--- a/module/Acidente/view/acidente/acidente/index.phtml
+++ b/module/Acidente/view/acidente/acidente/index.phtml
@@ -78,7 +78,14 @@ $this->headScript()->prependFile('/js/bootstrap-datepicker.js');
 	<td><?php echo $this->escapeHtml($acidente->localizacao);?></td>
 	<td><?php echo $this->escapeHtml($acidente->descricao);?></td>
 	<td>
-		<a href="<?php echo $this->url('acidente', array('action' => 'info', 'id' => $acidente->id));?>">Mais informações</a>
+		<a href="<?php echo $this->url('acidente',
+			array('action' => 'info', 'id' => $acidente->id));?>">Mais informações</a> |
+		<a href="<?php echo $this->url('acidente',
+			array('action' => 'edit', 'id' => $acidente->id));?>">Editar</a>
+		<?php if ($isAdmin) : ?>
+		 | <a href="<?php echo $this->url('acidente',
+			array('action' => 'delete', 'id' => $acidente->id));?>">Remover</a>
+		<?php endif; ?>
 	</td>
 </tr>
 <?php endforeach; ?>
