--- a/module/TipoRecurso/view/tipo-recurso/tipo-recurso/delete.phtml
+++ b/module/TipoRecurso/view/tipo-recurso/tipo-recurso/delete.phtml
@@ -20,6 +20,6 @@ $url = $this->url('tiporecurso', array(
 <div>
     <input type="hidden" name="id" value="<?php echo (int) $tipoRecurso->id; ?>" />
     <input type="submit" class="btn btn-danger" name="del" value="Sim" />
-    <input type="submit" class="btn" name="del" value="Não" />
+    <input type="submit" class="btn btn-default" name="del" value="Não" />
 </div>
 </form>
