--- a/module/Acidente/view/acidente/acidente/delete.phtml
+++ b/module/Acidente/view/acidente/acidente/delete.phtml
@@ -14,7 +14,6 @@ $this->headTitle($title);
 	<th>Status</th>
 	<th>Localização</th>
 	<th>Descrição</th>
-	<th>&nbsp;</th>
 </tr>
 <tr>
 	<td><?php echo $this->escapeHtml(date('d/m/Y', strtotime($acidente->data)));?></td>
@@ -30,6 +29,6 @@ $this->headTitle($title);
 <div>
 	<input type="hidden" name="id" value="<?php echo (int) $acidente->id; ?>" />
 	<input type="submit" class="btn btn-danger" name="del" value="Sim" />
-	<input type="submit" class="btn" name="del" value="Não" />
+	<input type="submit" class="btn btn-default" name="del" value="Não" />
 </div>
 </form>
