--- a/module/Acidente/view/acidente/acidente/info.phtml
+++ b/module/Acidente/view/acidente/acidente/info.phtml
@@ -73,14 +73,19 @@ $this->headTitle($title);
 <tr>
 	<th>Missões alocadas</th>
 	<th id="recursos-th"></th>
-	<th>&nbsp;</th></tr>
+	<th>&nbsp;</th>
+</tr>
 <?php if (count($missoes) == 0) { ?>
 <tr>
-	<td>Não existem missões alocadas para este acidente</td>
+	<td>Não existem missões alocadas para este acidente.</td>
 	<td></td>
 	<td></td>
 </tr>
-<?php } else { foreach ($missoes as $missao) : ?>
+<?php } else { ?>
+<script type="text/javascript">
+	$('#recursos-th').html("Recursos");
+</script>
+<?php foreach ($missoes as $missao) : ?>
 <tr>
 	<td><?php echo $this->escapeHtml($missao->nome);?></td>
 	<?php if ($isCoordenador && !$missao->recursosAlocados) { ?>
@@ -96,7 +101,16 @@ $this->headTitle($title);
 	</td>
 	<?php } ?>
 	<td>
-		<a href="<?php echo $this->url('missao', array('action'=>'detalhes', 'id' => $missao->id));?>">Detalhes</a> 
+		<a href="<?php echo $this->url('missao',
+			array('action'=>'detalhes', 'id' => $missao->id));?>">Detalhes</a>
+		<?php if ($isEspecialista) : ?>
+		 | <a href="<?php echo $this->url('missao',
+			array('action' => 'edit', 'id' => $missao->id));?>">Editar</a>
+		<?php endif; ?>
+		<?php if ($isAdmin) : ?>
+		 | <a href="<?php echo $this->url('missao',
+			array('action' => 'delete', 'id' => $missao->id));?>">Remover</a>
+		<?php endif; ?>
 	</td>
 </tr>
 <?php endforeach; } ?>
