--- a/module/Missao/view/missao/missao/detalhes.phtml
+++ b/module/Missao/view/missao/missao/detalhes.phtml
@@ -30,22 +30,23 @@ $this->headTitle($title);
 <table class="table">
 <tr>
     <th>Recurso</th>
-    <th>Quantidade</th>
+    <th id="quantidade-th"></th>
 </tr>
-<?php
-if (count($recursosLista) > 0) {
-foreach ($recursosLista as $recurso) : ?>
+<?php if (count($recursosLista) == 0) { ?>
+<tr>
+	<td>Não existem recursos alocados para esta missão.</td>
+	<td></td>
+</tr>
+<?php } else { ?>
+<script type="text/javascript">
+	$('#quantidade-th').html("Quantidade");
+</script>
+<?php foreach ($recursosLista as $recurso) : ?>
 <tr>
 	<td><?php echo $this->escapeHtml($recurso->nome); ?></td>
 	<td><?php echo $this->escapeHtml($recurso->quantidade); ?></td>
 </tr>
-<?php endforeach;
-} else { ?>
-<tr>
-	<td>Não há recursos alocados para esta missão.</td>
-	<td></td>
-</tr>
-<?php } ?>
+<?php endforeach; } ?>
 </table>
 
 <a id="btn-voltar" class="btn btn-default" href="<?php echo $this->url('missao'); ?>">Voltar</a>
