--- a/module/Missao/view/missao/missao/index.phtml
+++ b/module/Missao/view/missao/missao/index.phtml
@@ -1,5 +1,5 @@
 <?php
-$title = 'Missões';
+$title = 'Missões cadastradas';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title);?></h1>
@@ -7,7 +7,7 @@ $this->headTitle($title);
 <?php
 	$isAutenticado = isset($permissao) && $permissao;
 	$isAdmin = $isAutenticado && $permissao == 'administrador';
-	$isCoordenador = $isAutenticado && ($isAdmin || $permissao == 'coordenador');
+	$isEspecialista = $isAutenticado && ($isAdmin || $permissao == 'especialista');
 ?>
 
 <hr class="divider">
@@ -65,7 +65,16 @@ $this->headTitle($title);
 	<td><?php echo $this->escapeHtml($Missao->statusNome);?></td>
 
 	<td>
-		<a href="<?php echo $this->url('missao', array('action'=>'detalhes', 'id' => $Missao->id));?>">Detalhes</a> 
+		<a href="<?php echo $this->url('missao',
+			array('action'=>'detalhes', 'id' => $Missao->id));?>">Detalhes</a>
+		<?php if ($isEspecialista) : ?>
+		 | <a href="<?php echo $this->url('missao',
+			array('action' => 'edit', 'id' => $Missao->id));?>">Editar</a>
+		<?php endif; ?>
+		<?php if ($isAdmin) : ?>
+		 | <a href="<?php echo $this->url('missao',
+			array('action' => 'delete', 'id' => $Missao->id));?>">Remover</a>
+		<?php endif; ?>
 	</td>
 </tr>
 <?php endforeach; ?>
