--- a/module/TipoMissao/view/tipo-missao/tipo-missao/delete.phtml
+++ b/module/TipoMissao/view/tipo-missao/tipo-missao/delete.phtml
@@ -20,6 +20,6 @@ $url = $this->url('tipomissao', array(
 <div>
     <input type="hidden" name="id" value="<?php echo (int) $tipoMissao->id; ?>" />
     <input type="submit" class="btn btn-danger" name="del" value="Sim" />
-    <input type="submit" class="btn" name="del" value="Não" />
+    <input type="submit" class="btn btn-default" name="del" value="Não" />
 </div>
 </form>
