--- a/module/Usuario/view/usuario/usuario/delete.phtml
+++ b/module/Usuario/view/usuario/usuario/delete.phtml
@@ -20,6 +20,6 @@ $url = $this->url('usuario', array(
 <div>
 	<input type="hidden" name="id" value="<?php echo (int) $usuario->id; ?>" />
 	<input type="submit" class="btn btn-danger" name="del" value="Sim" />
-	<input type="submit" class="btn" name="del" value="Não" />
+	<input type="submit" class="btn btn-default" name="del" value="Não" />
 </div>
 </form>
